update flag container implementation